Added shape name comments to map views.

--- a/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml
@@ -237,6 +237,7 @@
         </script>
     }
     <fieldset>
+        <!-- Google Map -->
         <legend>@T("Map Fields")</legend>
         <p>
             @T("Type a Location"):
