--- a/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
@@ -159,6 +159,7 @@
     </script>
 }
 <fieldset>
+    <!-- OsmMap -->
     <legend>@T("Map Fields")</legend>
     <div class="location-infos">
         <span class="location-info">
