--- a/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
@@ -37,7 +37,7 @@
     Script.Require("jQueryUI_Core");
     Script.Require("jQueryUI_Autocomplete");
     Style.Require("jQuery_Autocomplete");
-
+    
     <style type="text/css">
         .ui-autocomplete.ui-front {
             z-index: 9999;
@@ -173,7 +173,8 @@
             var markers = new OpenLayers.Layer.Markers( "Markers" );
             map.addLayer(markers);
 
-            markers.addMarker(new OpenLayers.Marker(lonLat));
+            var marker = new OpenLayers.Marker(lonLat);
+            markers.addMarker(marker);
 
             // A popup with some information about our location
             var popup = new OpenLayers.Popup.FramedCloud("Popup", lonLat, null,
@@ -232,6 +233,6 @@
             <label class="sub">@T("Longitude"): </label>@Html.TextBoxFor(model => model.Map.Longitude, new { placeHolder = T("Longitude"), @class = "text" })
         </span>
     </div>
-    <div id="maparea" style="width: 700px; height: 450px;">
+    <div id="maparea" style="width: 700px; height: 450px; margin-top: 20px !important;">
     </div>
 </fieldset>
